apps/omada/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  annotations:
    reloader.stakater.com/auto: 'true'
  labels: &labels
    app.kubernetes.io/component: app
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      volumes:
        - name: volume
          persistentVolumeClaim:
            claimName: volume
      containers:
        - name: omada
          image: mbentley/omada-controller:6@sha256:bf81f0456f74c6ceb84d1bf708141f42423a1b1eb74f3b187a12f5965af8a818
          volumeMounts:
            - name: volume
              subPath: data
              mountPath: /opt/tplink/EAPController/data
            - name: volume
              subPath: logs
              mountPath: /opt/tplink/EAPController/logs
          resources:
            requests:
              memory: 100M
            limits:
              memory: 4G
          ports:
            - name: https
              containerPort: 8043
---
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app.kubernetes.io/component: app
  ports:
    - name: https
      port: 443
      targetPort: https

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    tailscale.com/proxy-group: ingress-proxy-group
    tailscale.com/tags: tag:k8s,tag:infra
spec:
  defaultBackend:
    service:
      name: app-service
      port:
        name: https
  ingressClassName: tailscale
  tls:
    - hosts: [omada]
